2014-05-15  Martin Jambor  <mjambor@suse.cz>

PR ipa/61085
	* ipa-prop.c (update_indirect_edges_after_inlining): Check
	type_preserved flag when the indirect edge is polymorphic.

testsuite/
	* g++.dg/ipa/pr61085.C: New test.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@210477 138bc75d-0d04-0410-961f-82ee72b054a4